# aero-mitosis

./: Cargo.toml  README.md
.github/workflows/: ci.yml
autonomic-ci-engine/: Cargo.toml
autonomic-ci-engine/crates/autonomic_ci_core/: Cargo.toml
autonomic-ci-engine/crates/autonomic_ci_core/src/: lib.rs
autonomic-ci-engine/crates/autonomic_ci_core/src/diagnostics/: causal_gradient.rs  ffi_normalizer.rs
autonomic-ci-engine/crates/autonomic_ci_core/src/scheduler/: mod.rs  wavefront.rs  work_stealing.rs
autonomic-ci-engine/crates/autonomic_ci_core/tests/: end_to_end.rs
autonomic-ci-engine/crates/autonomic_ci_parser/: Cargo.toml
autonomic-ci-engine/crates/autonomic_ci_parser/src/: lib.rs
autonomic-ci-engine/crates/autonomic_ci_parser/src/ast/: matrix_mapper.rs  queries.rs
autonomic-ci-engine/crates/autonomic_ci_parser/src/scm/: ingestion.rs
autonomic-ci-engine/crates/autonomic_ci_virtualizer/: Cargo.toml
autonomic-ci-engine/crates/autonomic_ci_virtualizer/src/: lib.rs
autonomic-ci-engine/crates/autonomic_ci_virtualizer/src/virtualization/: engine.rs  macos_apfs.rs  macos_fsevents.rs  traits.rs  windows_projfs.rs
crates/autonomic_ci_core/: Cargo.toml
crates/autonomic_ci_core/src/: lib.rs
crates/autonomic_ci_core/src/diagnostics/: causal_gradient.rs  ffi_normalizer.rs  mod.rs
crates/autonomic_ci_core/src/scheduler/: wavefront.rs  work_stealing.rs
crates/autonomic_ci_core/src/self_healing/: router.rs
crates/autonomic_ci_core/tests/: end_to_end.rs
crates/autonomic_ci_parser/: Cargo.toml
crates/autonomic_ci_parser/src/ast/: matrix_mapper.rs  mod.rs  queries.rs
crates/autonomic_ci_parser/src/scm/: ingestion.rs
crates/autonomic_ci_virtualizer/: Cargo.toml
crates/autonomic_ci_virtualizer/src/virtualization/: engine.rs  macos_apfs.rs  mod.rs  traits.rs  windows_fallback.rs  windows_projfs.rs
src/: main.rs
tests/: integration.rs
