[workspace]
resolver = "2"
members = [
    "crates/autonomic_ci_virtualizer",
    "crates/autonomic_ci_parser",
    "crates/autonomic_ci_core",
]

[package]
name = "aero-mitosis"
version = "0.1.0"
edition = "2021"
authors = ["sys1own <sys1own@users.noreply.github.com>"]
description = "An autonomic, self-healing CI build orchestration engine written in Rust."
license = "MIT"
repository = "https://github.com/sys1own/aero-mitosis"
readme = "README.md"
categories = ["development-tools::build-tools", "command-line-utilities"]
keywords = ["ci", "self-healing", "orchestrator", "automation"]

[[bin]]
name = "aero-mitosis"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }

[dev-dependencies]
autonomic_ci_core = { path = "crates/autonomic_ci_core" }
autonomic_ci_parser = { path = "crates/autonomic_ci_parser" }
autonomic_ci_virtualizer = { path = "crates/autonomic_ci_virtualizer" }
