[package]
name = "autonomic_ci_core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
crossbeam-deque = "0.8"
crossbeam-channel = "0.5"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
autonomic_ci_parser = { path = "../autonomic_ci_parser" }
autonomic_ci_virtualizer = { path = "../autonomic_ci_virtualizer" }

[dev-dependencies]
proptest = "=1.5.0"
tempfile = "=3.14.0"
