[package]
name = "autonomic_ci_virtualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
notify = "6.1.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Storage_ProjectedFileSystem"] }
